222 get file from dfs v2 (#369)
* Added bi-directional support for the FileTransferInformation class

* Modified stream to read from memory stream instead of custom IPFS stream

* Made file transfer more Task async based

* Added using around the IPFS stream

* Separated File Downloads and Uploads

* Modified get file command to require node, filehash and fileoutput args

* Expire instance if not successful response

* Remove file transfer if the AddFileToDfsResponseHandler was unsuccessful

* Remove need of cancellation token inside the download and upload factories

* Made FileTransferFactory dictionary lock non-static

* Refactor FileTransfer code to remove break statements

* Removed ref arguments from file upload retry mechanism

* Use configure await to not lock up main context

* Remove throwing a null reference

* Using Polly for File Transfer Unit tests

* Check if file transfer is initialized

* ConfigureAwait(false) when added a file to DFS

* Stopped IPFS task from locking main context thread

* Add cancellation token to the DownloadFactory delay

* Create Overload instead of defaults for CreateTempFile

* Change dispose method to virtual inside base file transfer

* Ensure Keys exist inside factory before calling factory methods

* Check read count of CRC check, if not fully read return -1

* Implemented Polly for Upload retries

--- a/src/Catalyst.Cli/Config/shell.components.json
+++ b/src/Catalyst.Cli/Config/shell.components.json
@@ -163,10 +163,35 @@
             ]
         },
         {
-            "type": "Catalyst.Cli.Rpc.RpcFileTransfer, Catalyst.Cli",
+            "type": "Catalyst.Cli.Handlers.GetFileFromDfsResponseHandler, Catalyst.Cli",
             "services": [
                 {
-                    "type": "Catalyst.Common.Interfaces.Rpc.IRpcFileTransfer, Catalyst.Common"
+                    "type": "Catalyst.Common.Interfaces.IO.Messaging.IRpcResponseHandler, Catalyst.Common"
+                }
+            ]
+        },
+        {
+            "type": "Catalyst.Cli.Handlers.TransferFileBytesRequestHandler, Catalyst.Cli",
+            "services": [
+                {
+                    "type": "Catalyst.Common.Interfaces.IO.Messaging.IRpcResponseHandler, Catalyst.Common"
+                }
+            ]
+        },
+        {
+            "type": "Catalyst.Common.FileTransfer.DownloadFileTransferFactory, Catalyst.Common",
+            "services": [
+                {
+                    "type": "Catalyst.Common.Interfaces.FileTransfer.IDownloadFileTransferFactory, Catalyst.Common"
+                }
+            ],
+            "instanceScope": "singleinstance"
+        },
+        {
+            "type": "Catalyst.Common.FileTransfer.UploadFileTransferFactory, Catalyst.Common",
+            "services": [
+                {
+                    "type": "Catalyst.Common.Interfaces.FileTransfer.IUploadFileTransferFactory, Catalyst.Common"
                 }
             ],
             "instanceScope": "singleinstance"
