--- a/src/Catalyst.Node.Core/Config/components.json
+++ b/src/Catalyst.Node.Core/Config/components.json
@@ -74,6 +74,14 @@
             ]
         },
         {
+            "type": "Catalyst.Common.Shell.ConsoleUserOutput, Catalyst.Common",
+            "services": [
+                {
+                    "type": "Catalyst.Common.Interfaces.Cli.IUserOutput, Catalyst.Common"
+                }
+            ]
+        },
+        {
             "type": "Catalyst.Common.Cryptography.NSecCryptoContext, Catalyst.Common",
             "services": [
                 {
