--- a/src/Catalyst.Node.Core/Config/components.json
+++ b/src/Catalyst.Node.Core/Config/components.json
@@ -82,7 +82,7 @@
             ]
         },
         {
-            "type": "Catalyst.Common.Cryptography.NSecCryptoContext, Catalyst.Common",
+            "type": "Catalyst.Common.Cryptography.RustCryptoContext, Catalyst.Common",
             "services": [
                 {
                     "type": "Catalyst.Common.Interfaces.Cryptography.ICryptoContext, Catalyst.Common"
