refactor message factories to remove all generics to allow injecting of factory

--- a/src/Catalyst.Cli/Config/shell.components.json
+++ b/src/Catalyst.Cli/Config/shell.components.json
@@ -18,6 +18,14 @@
             ]
         },
         {
+            "type": "Catalyst.Common.Rpc.RpcMessageFactory",
+            "services": [
+                {
+                    "type": "Catalyst.Common.Interfaces.Rpc.IRpcMessageFactory, Catalyst.Common"
+                }
+            ]
+        },
+        {
             "type": "Microsoft.Extensions.Caching.Memory.MemoryCacheOptions, Microsoft.Extensions.Caching.Memory",
             "services": [
                 {
@@ -37,7 +45,7 @@
             "type": "Catalyst.Common.Rpc.RpcCorrelationCache, Catalyst.Common",
             "services": [
                 {
-                    "type": "Catalyst.Common.Interfaces.IO.Messaging.IMessageCorrelationCache, Catalyst.Common"
+                    "type": "Catalyst.Common.Interfaces.IO.Messaging.IRpcCorrelationCache, Catalyst.Common"
                 }
             ]
         },
