--- a/src/Catalyst.Node.Core/Config/components.json
+++ b/src/Catalyst.Node.Core/Config/components.json
@@ -13,7 +13,15 @@
             "type": "Catalyst.Common.Rpc.RpcCorrelationCache, Catalyst.Common",
             "services": [
                 {
-                    "type": "Catalyst.Common.Interfaces.IO.Messaging.IMessageCorrelationCache, Catalyst.Common"
+                    "type": "Catalyst.Common.Interfaces.IO.Messaging.IRpcCorrelationCache, Catalyst.Common"
+                }
+            ]
+        },
+        {
+            "type": "Catalyst.Common.Rpc.RpcMessageFactory",
+            "services": [
+                {
+                    "type": "Catalyst.Common.Interfaces.Rpc.IRpcMessageFactory, Catalyst.Common"
                 }
             ]
         },
