--- a/src/Catalyst.Cli/Config/shell.components.json
+++ b/src/Catalyst.Cli/Config/shell.components.json
@@ -18,7 +18,7 @@
             ]
         },
         {
-            "type": "Catalyst.Common.Rpc.RpcMessageFactory",
+            "type": "Catalyst.Common.Rpc.RpcMessageFactory, Catalyst.Common",
             "services": [
                 {
                     "type": "Catalyst.Common.Interfaces.Rpc.IRpcMessageFactory, Catalyst.Common"
@@ -45,7 +45,7 @@
             "type": "Catalyst.Common.Rpc.RpcCorrelationCache, Catalyst.Common",
             "services": [
                 {
-                    "type": "Catalyst.Common.Interfaces.IO.Messaging.IRpcCorrelationCache, Catalyst.Common"
+                    "type": "Catalyst.Common.Interfaces.Rpc.IRpcCorrelationCache, Catalyst.Common"
                 }
             ]
         },
