THIS IS AN INCOMPLETE AND UNTESTED WORK.  All should be revisited after based on the final implementation of the AzureCosmosDbRepository in the SharpRepository repo.

--- a/src/Catalyst.Node.Core/Catalyst.Node.Core.csproj
+++ b/src/Catalyst.Node.Core/Catalyst.Node.Core.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="DotNetty.Handlers" Version="0.6.0" />
     <PackageReference Include="Ipfs.Core" Version="0.41.0" />
     <PackageReference Include="Ipfs.Engine" Version="0.7.2" />
+    <PackageReference Include="Microsoft.Azure.DocumentDB.Core" Version="2.4.0" />
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="2.2.0" />
@@ -34,6 +35,7 @@
     <PackageReference Include="Dawn.Guard" Version="1.8.0" />
     <PackageReference Include="SharpRepository.InMemoryRepository" Version="2.0.3.1" />
     <PackageReference Include="SharpRepository.Ioc.Autofac" Version="2.0.4.2" />
+    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.0.0.10-preview" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Catalyst.Common\Catalyst.Common.csproj" />
@@ -46,5 +48,10 @@
     <None Update="Config\Modules\*.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="SharpRepository.AzureCosmosDb, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
+      <HintPath>..\..\..\SharpRepository\SharpRepository.AzureCosmosDb\bin\Debug\netcoreapp2.2\SharpRepository.AzureCosmosDb.dll</HintPath>
+    </Reference>
   </ItemGroup>
 </Project>
