--- a/src/Catalyst.Node.Core/Config/components.json
+++ b/src/Catalyst.Node.Core/Config/components.json
@@ -237,7 +237,7 @@
             }
         },
         {
-            "type": "Catalyst.Node.Core.Modules.JsonConfiguredModule",
+            "type": "Catalyst.Node.Core.Modules.Consensus.ConsensusModule",
             "parameters": {
                 "configFilePath": "Config/Modules/consensus.json"
             }
