--- a/src/Catalyst.Node.Core/Config/components.json
+++ b/src/Catalyst.Node.Core/Config/components.json
@@ -42,6 +42,14 @@
             ]
         },
         {
+            "type": "Catalyst.Common.IO.Messaging.CorrelationManager, Catalyst.Common",
+            "services": [
+                {
+                    "type": "Catalyst.Common.Interfaces.IO.Messaging.ICorrelationManager, Catalyst.Common"
+                }
+            ]
+        },
+        {
             "type": "Catalyst.Node.Core.P2P.Messaging.P2PCorrelationCache",
             "services": [
                 {
