--- a/src/Catalyst.Node.Core.UnitTests/Catalyst.Node.Core.UnitTests.csproj
+++ b/src/Catalyst.Node.Core.UnitTests/Catalyst.Node.Core.UnitTests.csproj
@@ -17,7 +17,10 @@
     <None Update="Config\Modules\mempool.inmemory.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="Config\Modules\mempool.xml.json">
+    <None Update="Config\Modules\moduleWithRepository.inmemory.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Config\Modules\moduleWithRepository.xml.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="Config\peerConfigSection.json">
