--- a/src/Catalyst.Node.Core/Config/components.json
+++ b/src/Catalyst.Node.Core/Config/components.json
@@ -85,7 +85,7 @@
             "type": "Catalyst.Common.KeyStore.KeyStoreServiceWrapped, Catalyst.Common",
             "services": [
                 {
-                    "type": "Catalyst.Common.Interfaces.KeyStore.IKeyStoreWrapper, Catalyst.Common"
+                    "type": "Catalyst.Common.Interfaces.KeyStore.IKeyStoreService, Catalyst.Common"
                 }
             ]
         },
@@ -94,6 +94,14 @@
             "services": [
                 {
                     "type": "Catalyst.Common.Interfaces.Cli.IUserOutput, Catalyst.Common"
+                }
+            ]
+        },
+        {
+            "type": "Catalyst.Common.Util.AddressHelper, Catalyst.Common",
+            "services": [
+                {
+                    "type": "Catalyst.Common.Interfaces.Util.IAddressHelper, Catalyst.Common"
                 }
             ]
         },
