--- a/src/Catalyst.Node.Core/Catalyst.Node.Core.csproj
+++ b/src/Catalyst.Node.Core/Catalyst.Node.Core.csproj
@@ -1,4 +1,4 @@
-﻿<Project>
+<Project>
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <Title>Catalyst Node</Title>
@@ -18,8 +18,10 @@
     <PackageReference Include="DotNetty.Codecs.Protobuf" Version="0.6.0" />
     <PackageReference Include="DotNetty.Common" Version="0.6.0" />
     <PackageReference Include="DotNetty.Handlers" Version="0.6.0" />
-    <PackageReference Include="Ipfs.Core" Version="0.50.0" />
-    <PackageReference Include="Ipfs.Engine" Version="0.8.0" />
+    <PackageReference Include="Ipfs.Core" Version="0.51.1" />
+    <PackageReference Include="Ipfs.Engine" Version="0.9.1" />
+    <PackageReference Include="Ipfs.HttpGateway" Version="0.3.0" />
+    <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="2.2.0" />
