--- a/src/Catalyst.Node.Core/Config/components.json
+++ b/src/Catalyst.Node.Core/Config/components.json
@@ -225,16 +225,16 @@
             "type": "Catalyst.Node.Core.P2P.Messaging.Gossip.GossipManager",
             "services": [
                 {
-                    "type": "Catalyst.Common.Interfaces.IO.Messaging.Gossip.IGossipManager, Catalyst.Common"
+                    "type": "Catalyst.Common.Interfaces.P2P.Messaging.Gossip.IGossipManager, Catalyst.Common"
                 }
             ],
             "instanceScope": "singleinstance"
         },
         {
-            "type": "Catalyst.Common.IO.Inbound.GossipHandler, Catalyst.Common",
+            "type": "Catalyst.Node.Core.P2P.Messaging.Gossip.GossipHandler",
             "services": [
                 {
-                    "type": "Catalyst.Common.Interfaces.IO.Messaging.Gossip.IGossipHandler, Catalyst.Common"
+                    "type": "Catalyst.Common.Interfaces.P2P.Messaging.Gossip.IGossipHandler, Catalyst.Common"
                 }
             ]
         }
