Updated components with PeerClient

--- a/src/Catalyst.Node.Core/Config/components.json
+++ b/src/Catalyst.Node.Core/Config/components.json
@@ -162,6 +162,14 @@
             ]
         },
         {
+            "type": "Catalyst.Node.Core.P2P.PeerClient",
+            "services": [
+                {
+                    "type": "Catalyst.Common.Interfaces.P2P.IPeerClient, Catalyst.Common"
+                }
+            ]
+        },
+        {
             "type": "Catalyst.Common.Cryptography.CertificateStore, Catalyst.Common",
             "services": [
                 {
