--- a/src/Catalyst.Common.UnitTests/Catalyst.Common.UnitTests.csproj
+++ b/src/Catalyst.Common.UnitTests/Catalyst.Common.UnitTests.csproj
@@ -2,9 +2,11 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
+  <PropertyGroup>
+    <RootNamespace>Catalyst.Common.UnitTests</RootNamespace>
+  </PropertyGroup>
   <Import Project="../Common.UnitTests.props" />
   <ItemGroup>
-    <PackageReference Update="Microsoft.NET.Test.Sdk" Version="16.0.1" />
     <PackageReference Include="Autofac.Configuration" Version="4.1.0" />
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.3.1" />
     <PackageReference Include="AutofacSerilogIntegration" Version="2.0.0" />
@@ -14,6 +16,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Catalyst.Common\Catalyst.Common.csproj" />
+    <ProjectReference Include="..\Catalyst.TestUtils\Catalyst.TestUtils.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="..\..\submodules\Nethereum\src\Nethereum.RLP.UnitTests\RLPTests.cs" Link="RLP\RLPTests.cs" />
