--- a/src/Common.UnitTests.props
+++ b/src/Common.UnitTests.props
@@ -1,21 +1,13 @@
 <Project>
-  <PropertyGroup>
-    <IsTestProject>True</IsTestProject>
-    <IsPackable>false</IsPackable>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <Optimize>false</Optimize>
-  </PropertyGroup>
-  <Import Project="./Common.Projects.props" />
-  <ItemGroup>
-    <PackageReference Include="FluentAssertions" Version="5.6.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
-    <PackageReference Include="NSubstitute" Version="4.1.0" />
-    <PackageReference Include="xunit.core" Version="2.4.1" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
-    <PackageReference Include="xunit.runner.reporters" Version="2.4.1" />
-    <PackageReference Include="xunit.assert" Version="2.4.1" />
-    <PackageReference Include="coverlet.msbuild" Version="2.6.0" />
-    <PackageReference Include="Serilog.Sinks.XUnit" Version="1.0.8" />
-  </ItemGroup>
+    <PropertyGroup>
+        <IsTestProject>True</IsTestProject>
+        <IsPackable>false</IsPackable>
+    </PropertyGroup>
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+        <Optimize>false</Optimize>
+    </PropertyGroup>
+    <Import Project="./Common.TestProjects.props" />
+    <ItemGroup>
+        <PackageReference Include="coverlet.msbuild" Version="2.6.0" />
+    </ItemGroup>
 </Project>
