--- a/src/Catalyst.Cli/Catalyst.Cli.csproj
+++ b/src/Catalyst.Cli/Catalyst.Cli.csproj
@@ -22,6 +22,7 @@
         <PackageReference Include="DotNetty.Handlers" Version="0.6.0" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
         <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.2.0" />
+        <PackageReference Include="Nethereum.RLP" Version="3.3.0" />
         <PackageReference Include="Serilog" Version="2.8.0" />
         <PackageReference Include="Serilog.Enrichers.Environment" Version="2.1.3" />
         <PackageReference Include="Serilog.Enrichers.Thread" Version="3.1.0" />
