--- a/src/Catalyst.Common.UnitTests/Catalyst.Common.UnitTests.csproj
+++ b/src/Catalyst.Common.UnitTests/Catalyst.Common.UnitTests.csproj
@@ -10,6 +10,8 @@
         <PackageReference Include="Autofac.Configuration" Version="4.1.0" />
         <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.3.1" />
         <PackageReference Include="AutofacSerilogIntegration" Version="2.0.0" />
+        <PackageReference Include="Nethereum.KeyStore" Version="3.3.0" />
+        <PackageReference Include="Nethereum.RLP" Version="3.3.0" />
         <PackageReference Include="Serilog.Sinks.File" Version="4.0.0" />
         <PackageReference Include="SharpRepository.Ioc.Autofac" Version="2.0.4.2" />
         <PackageReference Include="Serilog.Settings.Configuration" Version="3.0.1" />
