--- a/src/Catalyst.Node.Core.IntegrationTests/Catalyst.Node.Core.IntegrationTests.csproj
+++ b/src/Catalyst.Node.Core.IntegrationTests/Catalyst.Node.Core.IntegrationTests.csproj
@@ -18,4 +18,7 @@
         <ProjectReference Include="..\Catalyst.Node.Core\Catalyst.Node.Core.csproj" />
         <ProjectReference Include="..\Catalyst.TestUtils\Catalyst.TestUtils.csproj" />
     </ItemGroup>
+    <ItemGroup>
+      <PackageReference Include="Nethereum.RLP" Version="3.3.0" />
+    </ItemGroup>
 </Project>
