--- a/src/Catalyst.Node.Core/Catalyst.Node.Core.csproj
+++ b/src/Catalyst.Node.Core/Catalyst.Node.Core.csproj
@@ -24,6 +24,7 @@
         <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="2.2.0" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
+        <PackageReference Include="Nethereum.RLP" Version="3.3.0" />
         <PackageReference Include="Serilog" Version="2.8.0" />
         <PackageReference Include="Serilog.Extensions.Logging" Version="2.0.4" />
         <PackageReference Include="Serilog.Enrichers.Environment" Version="2.1.3" />
