--- a/src/Catalyst.Node.Rpc.Client.IntegrationTests/Catalyst.Node.Rpc.Client.IntegrationTests.csproj
+++ b/src/Catalyst.Node.Rpc.Client.IntegrationTests/Catalyst.Node.Rpc.Client.IntegrationTests.csproj
@@ -11,4 +11,7 @@
     <ProjectReference Include="..\Catalyst.Node.Rpc.Client\Catalyst.Node.Rpc.Client.csproj" />
     <ProjectReference Include="..\Catalyst.TestUtils\Catalyst.TestUtils.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Nethereum.RLP" Version="3.3.0" />
+  </ItemGroup>
 </Project>
