--- a/src/Catalyst.TestUtils/Catalyst.TestUtils.csproj
+++ b/src/Catalyst.TestUtils/Catalyst.TestUtils.csproj
@@ -10,4 +10,7 @@
         <ProjectReference Include="..\Catalyst.Common\Catalyst.Common.csproj" />
         <ProjectReference Include="..\Catalyst.Node.Core\Catalyst.Node.Core.csproj" />
     </ItemGroup>
+    <ItemGroup>
+      <PackageReference Include="Nethereum.RLP" Version="3.3.0" />
+    </ItemGroup>
 </Project>
