Update sln and csproj

--- a/src/Catalyst.Cli.IntegrationTests/Catalyst.Cli.IntegrationTests.csproj
+++ b/src/Catalyst.Cli.IntegrationTests/Catalyst.Cli.IntegrationTests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
@@ -16,9 +16,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Catalyst.Cli.UnitTests\Catalyst.Cli.UnitTests.csproj" />
     <ProjectReference Include="..\Catalyst.Cli\Catalyst.Cli.csproj" />
     <ProjectReference Include="..\Catalyst.Common\Catalyst.Common.csproj" />
+    <ProjectReference Include="..\Catalyst.TestUtils\Catalyst.TestUtils.csproj" />
   </ItemGroup>
 
 </Project>
