--- a/src/Catalyst.Node.Core.UnitTests/Catalyst.Node.Core.UnitTests.csproj
+++ b/src/Catalyst.Node.Core.UnitTests/Catalyst.Node.Core.UnitTests.csproj
@@ -1,4 +1,4 @@
-﻿<Project>
+<Project>
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
@@ -29,5 +29,8 @@
   <ItemGroup>
     <ProjectReference Include="..\Catalyst.Node.Core\Catalyst.Node.Core.csproj" />
     <ProjectReference Include="..\Catalyst.TestUtils\Catalyst.TestUtils.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="FileTransfer\" />
   </ItemGroup>
 </Project>
