--- a/src/Catalyst.Cli.IntegrationTests/Catalyst.Cli.IntegrationTests.csproj
+++ b/src/Catalyst.Cli.IntegrationTests/Catalyst.Cli.IntegrationTests.csproj
@@ -2,6 +2,10 @@
     <PropertyGroup>
         <TargetFramework>netcoreapp2.2</TargetFramework>
         <RootNamespace>Catalyst.Cli.IntegrationTests</RootNamespace>
+        <Authors>James Kirby (nshcore@protonmail.com)</Authors>
+        <SignAssembly>true</SignAssembly>
+        <AssemblyOriginatorKeyFile>Catalyst.Cli.IntergrationsTests.snk</AssemblyOriginatorKeyFile>
+        <PublicSign>true</PublicSign>
     </PropertyGroup>
     <Import Project="../Common.IntegrationTests.props" />
     <ItemGroup>
