--- a/src/Catalyst.Cli.UnitTests/Catalyst.Cli.UnitTests.csproj
+++ b/src/Catalyst.Cli.UnitTests/Catalyst.Cli.UnitTests.csproj
@@ -2,6 +2,10 @@
     <PropertyGroup>
         <IsTestProject>True</IsTestProject>
         <IsPackable>false</IsPackable>
+        <Authors>James Kirby (nshcore@protonmail.com)</Authors>
+        <SignAssembly>true</SignAssembly>
+        <AssemblyOriginatorKeyFile>Catalyst.Cli.UnitTests.snk</AssemblyOriginatorKeyFile>
+        <PublicSign>true</PublicSign>
     </PropertyGroup>
     <PropertyGroup>
         <TargetFramework>netcoreapp2.2</TargetFramework>
