--- a/src/Catalyst.Common.IntegrationTests/Catalyst.Common.IntegrationTests.csproj
+++ b/src/Catalyst.Common.IntegrationTests/Catalyst.Common.IntegrationTests.csproj
@@ -1,6 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFramework>netcoreapp2.2</TargetFramework>
+        <Authors>James Kirby (nshcore@protonmail.com)</Authors>
+        <SignAssembly>true</SignAssembly>
+        <AssemblyOriginatorKeyFile>Catalyst.Common.IntegrationTests.snk</AssemblyOriginatorKeyFile>
+        <PublicSign>true</PublicSign>
     </PropertyGroup>
     <PropertyGroup>
         <RootNamespace>Catalyst.Common.IntegrationTests</RootNamespace>
