--- a/src/Catalyst.Common/Catalyst.Common.csproj
+++ b/src/Catalyst.Common/Catalyst.Common.csproj
@@ -3,6 +3,10 @@
         <TargetFramework>netcoreapp2.2</TargetFramework>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <RootNamespace>Catalyst.Common</RootNamespace>
+        <Authors>James Kirby (nshcore@protonmail.com)</Authors>
+        <SignAssembly>true</SignAssembly>
+        <AssemblyOriginatorKeyFile>Catalyst.Common.snk</AssemblyOriginatorKeyFile>
+        <PublicSign>true</PublicSign>
     </PropertyGroup>
     <Import Project="../Common.Projects.props" />
     <ItemGroup>
