--- a/src/Catalyst.Node.Rpc.Client.IntegrationTests/Catalyst.Node.Rpc.Client.IntegrationTests.csproj
+++ b/src/Catalyst.Node.Rpc.Client.IntegrationTests/Catalyst.Node.Rpc.Client.IntegrationTests.csproj
@@ -1,6 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
+    <Authors>James Kirby (nshcore@protonmail.com)</Authors>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>Catalyst.Node.Rpc.Client.IntegrationTests.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <RootNamespace>Catalyst.Node.Rpc.Client.IntegrationTests</RootNamespace>
