--- a/src/Catalyst.Node.Rpc.Client/Catalyst.Node.Rpc.Client.csproj
+++ b/src/Catalyst.Node.Rpc.Client/Catalyst.Node.Rpc.Client.csproj
@@ -1,6 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 <PropertyGroup>
         <TargetFramework>netcoreapp2.2</TargetFramework>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <Authors>James Kirby (nshcore@protonmail.com)</Authors>
+        <SignAssembly>true</SignAssembly>
+        <AssemblyOriginatorKeyFile>Catalyst.Node.Rpc.Client.snk</AssemblyOriginatorKeyFile>
     </PropertyGroup>
     <PropertyGroup>
         <RootNamespace>Catalyst.Node.Rpc.Client</RootNamespace>
