Make peer client single instance

--- a/src/Catalyst.Node.Core/Config/components.json
+++ b/src/Catalyst.Node.Core/Config/components.json
@@ -10,6 +10,15 @@
             ]
         },
         {
+            "type": "Catalyst.Node.Core.P2P.PeerClient",
+            "services": [
+                {
+                    "type": "Catalyst.Common.Interfaces.P2P.IPeerClient, Catalyst.Common"
+                }
+            ],
+            "instanceScope": "singleinstance"
+        },
+        {
             "type": "Catalyst.Common.IO.Messaging.MessageFactory, Catalyst.Common",
             "services": [
                 {
